# DelegationService

./: .dockerignore  .envrc  .justfile  CHANGELOG.md  DelegationService.cabal  Dockerfile  README.md  cabal.project  cabal.project.freeze
config/: config_atlas.json
docs/swagger/: delegation-swagger-api.json
src/app/: DelegationAppMonad.hs  Main.hs  RestAPI.hs
src/lib/: Utils.hs
src/lib/TxBuilding/: Exceptions.hs  Interactions.hs  Operations.hs
src/lib/Utils/: Config.hs  Terminal.hs
